--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,18 @@ services:
       ports:
         - "8888:8888"
 
-  hello-service:
+  hello-service1:
       image: cloud-spring-boot/hello-service:1.0.0-SNAPSHOT
       ports:
         - "6060:8080"
+      environment:
+        EUREKASERVER_URI: "http://eureka:8761/eureka/"
+        EUREKASERVER_PORT: "8761"
+
+  hello-service2:
+      image: cloud-spring-boot/hello-service:1.0.0-SNAPSHOT
+      ports:
+        - "6061:8080"
       environment:
         EUREKASERVER_URI: "http://eureka:8761/eureka/"
         EUREKASERVER_PORT: "8761"
