--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - eureka
     environment:
       ENCRYPT_KEY: "dev-password"
-      EUREKASERVER_URI: "http://eureka:8761"
+      EUREKASERVER_URI: "http://eureka:8761/eureka/"
       EUREKASERVER_PORT: "8761"
 
   hello-service1:
