--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
-version: '3'
+version: '2.1'
 services:
 
   eureka:
       image: cloud-spring-boot/eureka:1.0.0-SNAPSHOT
       ports:
         - "8761:8761"
+      mem_limit: 1g
 
   config-service:
       image: cloud-spring-boot/config-service:1.0.0-SNAPSHOT
@@ -12,26 +13,18 @@ services:
         - "8888:8888"
       depends_on:
         - eureka
+      mem_limit: 1g
 
-  hello-service1:
-      image: cloud-spring-boot/hello-service:1.0.0-SNAPSHOT
-      ports:
-        - "6060:8080"
-      depends_on:
-        - eureka
-      environment:
-        EUREKASERVER_URI: "http://eureka:8761/eureka/"
-        EUREKASERVER_PORT: "8761"
-
-  hello-service2:
-      image: cloud-spring-boot/hello-service:1.0.0-SNAPSHOT
-      ports:
-        - "6061:8080"
-      depends_on:
-        - eureka
-      environment:
-        EUREKASERVER_URI: "http://eureka:8761/eureka/"
-        EUREKASERVER_PORT: "8761"
+#  hello-service1:
+#      image: cloud-spring-boot/hello-service:1.0.0-SNAPSHOT
+#      ports:
+#        - "6060:8080"
+#      depends_on:
+#        - eureka
+#      environment:
+#        EUREKASERVER_URI: "http://eureka:8761/eureka/"
+#        EUREKASERVER_PORT: "8761"
+#      mem_limit: 1g
 
   licensing-service:
       image: cloud-spring-boot/licensing-service:1.0.0-SNAPSHOT
@@ -41,8 +34,8 @@ services:
         - eureka
         - config-service
         - database
-        - hello-service1
-        - hello-service2
+        - organization-service1
+        - organization-service2
       environment:
         PROFILE: "default"
         CONFIGSERVER_URI: "http://config-service:8888"
@@ -50,11 +43,14 @@ services:
         DB_PORT: "5432"
         EUREKASERVER_URI: "http://eureka:8761/eureka/"
         EUREKASERVER_PORT: "8761"
+      mem_limit: 2g
 
   database:
       image: postgres:9.5
       ports:
         - "5432:5432"
+      mem_limit: 1g
+      memswap_limit: 1g
 
   organization-service1:
       image: cloud-spring-boot/organization-service:1.0.0-SNAPSHOT
@@ -65,6 +61,8 @@ services:
       environment:
         EUREKASERVER_URI: "http://eureka:8761/eureka/"
         EUREKASERVER_PORT: "8761"
+      mem_limit: 1g
+      memswap_limit: 1g
 
   organization-service2:
       image: cloud-spring-boot/organization-service:1.0.0-SNAPSHOT
@@ -75,6 +73,8 @@ services:
       environment:
         EUREKASERVER_URI: "http://eureka:8761/eureka/"
         EUREKASERVER_PORT: "8761"
+      mem_limit: 1g
+      memswap_limit: 1g
 
 
 
