Zuul service gateway added.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,17 @@ services:
         - "8761:8761"
       mem_limit: 1g
 
+  zuul:
+      image: cloud-spring-boot/zuul:1.0.0-SNAPSHOT
+      ports:
+        - "5555:5555"
+      depends_on:
+        - eureka
+      environment:
+        EUREKASERVER_URI: "http://eureka:8761/eureka/"
+        EUREKASERVER_PORT: "8761"
+      mem_limit: 1g
+
   config-service:
       image: cloud-spring-boot/config-service:1.0.0-SNAPSHOT
       ports:
@@ -14,17 +25,6 @@ services:
       depends_on:
         - eureka
       mem_limit: 1g
-
-#  hello-service1:
-#      image: cloud-spring-boot/hello-service:1.0.0-SNAPSHOT
-#      ports:
-#        - "6060:8080"
-#      depends_on:
-#        - eureka
-#      environment:
-#        EUREKASERVER_URI: "http://eureka:8761/eureka/"
-#        EUREKASERVER_PORT: "8761"
-#      mem_limit: 1g
 
   licensing-service:
       image: cloud-spring-boot/licensing-service:1.0.0-SNAPSHOT
@@ -75,6 +75,17 @@ services:
         EUREKASERVER_PORT: "8761"
       mem_limit: 1g
       memswap_limit: 1g
+
+#  hello-service1:
+#      image: cloud-spring-boot/hello-service:1.0.0-SNAPSHOT
+#      ports:
+#        - "6060:8080"
+#      depends_on:
+#        - eureka
+#      environment:
+#        EUREKASERVER_URI: "http://eureka:8761/eureka/"
+#        EUREKASERVER_PORT: "8761"
+#      mem_limit: 1g
 
 
 
