jwt.signing.key added inside config service for organization-service

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -39,4 +39,20 @@ services:
       POSTGRES_PASSWORD: "611191"
       POSTGRES_DB: "eagle_eye_dev"
 
+  organization-service1:
+      environment:
+        PROFILE: "dev"
+        CONFIGSERVER_URI: "http://config-service:8888"
+        CONFIGSERVER_PORT:   "8888"
+        EUREKASERVER_URI: "http://eureka:8761/eureka/"
+        EUREKASERVER_PORT: "8761"
+        AUTH_URI: "http://auth:3333/auth/user"
 
+  organization-service2:
+      environment:
+        PROFILE: "dev"
+        CONFIGSERVER_URI: "http://config-service:8888"
+        CONFIGSERVER_PORT:   "8888"
+        EUREKASERVER_URI: "http://eureka:8761/eureka/"
+        EUREKASERVER_PORT: "8761"
+        AUTH_URI: "http://auth:3333/auth/user"
