--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
         - eureka
         - config-service
         - database
+        - redis
         - organization-service1
         - organization-service2
       environment:
@@ -74,6 +75,12 @@ services:
       volumes:
         - ./pcap:/usr/local/licensing-service/pcap/
       mem_limit: 2g
+
+  redis:
+    image: redis:5.0-alpine
+    ports:
+      - 6379:6379
+    mem_limit: 256m
 
   database:
       image: postgres:9.5
