--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       mem_limit: 2g
 
   redis:
-    image: redis:5.0-alpine
+    image: redis:alpine
     ports:
       - 6379:6379
     mem_limit: 256m
@@ -102,6 +102,9 @@ services:
         EUREKASERVER_URI: "http://eureka:8761/eureka/"
         EUREKASERVER_PORT: "8761"
         AUTH_URI: "http://auth:3333/auth/user"
+        KAFKA_SERVER_URI: "kafka"
+        ZK_SERVER_URI: "kafka"
+        KAFKA_SERVER_PORT: "2181"
       volumes:
         - ./pcap:/usr/local/organization-service/pcap/
       mem_limit: 1g
@@ -124,3 +127,10 @@ services:
 #        - ./pcap:/usr/local/organization-service/pcap/
 #      mem_limit: 1g
 #      memswap_limit: 1g
+
+  kafka:
+    image: spotify/kafka
+    ports:
+      - 2181:2181
+      - 9092:9092
+    mem_limit: 512m
