--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,6 +32,9 @@ services:
       EUREKASERVER_URI: "http://eureka:8761/eureka/"
       EUREKASERVER_PORT: "8761"
       AUTH_URI: "http://auth:3333/auth/user"
+      KAFKA_SERVER_URI: "kafka"
+      ZK_SERVER_URI: "kafka"
+      KAFKA_SERVER_PORT: "2181"
 
   database:
     environment:
