jemalloc allocator with profiled added for organization service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,45 +53,45 @@ services:
         - ./pcap:/usr/local/auth/pcap/
       mem_limit: 1g
 
-#  licensing-service:
-#      image: cloud-spring-boot/licensing-service:1.0.0-SNAPSHOT
-#      ports:
-#        - "7070:8080"
-#      depends_on:
-#        - eureka
-#        - config-service
-#        - database
-#        - redis
-#        - organization-service1
-##        - organization-service2
-#        - kafka
-#      environment:
-#        PROFILE: "default"
-#        CONFIGSERVER_URI: "http://config-service:8888"
-#        CONFIGSERVER_PORT:   "8888"
-#        DB_PORT: "5432"
-#        EUREKASERVER_URI: "http://eureka:8761/eureka/"
-#        EUREKASERVER_PORT: "8761"
-#        AUTH_URI: "http://auth:3333/auth/user"
-#        KAFKA_SERVER_URI: "kafka"
-#        ZK_SERVER_URI: "kafka"
-#        KAFKA_SERVER_PORT: "2181"
-#      volumes:
-#        - ./pcap:/usr/local/licensing-service/pcap/
-#      mem_limit: 2g
-#
-#  redis:
-#    image: redis:alpine
-#    ports:
-#      - 6379:6379
-#    mem_limit: 128m
-#
-#  database:
-#      image: postgres:9.5
-#      ports:
-#        - "5432:5432"
-#      mem_limit: 1g
-#      memswap_limit: 1g
+  licensing-service:
+      image: cloud-spring-boot/licensing-service:1.0.0-SNAPSHOT
+      ports:
+        - "7070:8080"
+      depends_on:
+        - eureka
+        - config-service
+        - database
+        - redis
+        - organization-service1
+#        - organization-service2
+        - kafka
+      environment:
+        PROFILE: "default"
+        CONFIGSERVER_URI: "http://config-service:8888"
+        CONFIGSERVER_PORT:   "8888"
+        DB_PORT: "5432"
+        EUREKASERVER_URI: "http://eureka:8761/eureka/"
+        EUREKASERVER_PORT: "8761"
+        AUTH_URI: "http://auth:3333/auth/user"
+        KAFKA_SERVER_URI: "kafka"
+        ZK_SERVER_URI: "kafka"
+        KAFKA_SERVER_PORT: "2181"
+      volumes:
+        - ./pcap:/usr/local/licensing-service/pcap/
+      mem_limit: 2g
+
+  redis:
+    image: redis:alpine
+    ports:
+      - 6379:6379
+    mem_limit: 128m
+
+  database:
+      image: postgres:9.5
+      ports:
+        - "5432:5432"
+      mem_limit: 1g
+      memswap_limit: 1g
 
   organization-service1:
       image: cloud-spring-boot/organization-service:1.0.0-SNAPSHOT
@@ -112,7 +112,8 @@ services:
         KAFKA_SERVER_PORT: "2181"
       volumes:
         - ./pcap:/usr/local/organization-service/pcap/
-      mem_limit: 2g
+      mem_limit: 1g
+      memswap_limit: 1g
 
 #  organization-service2:
 #      image: cloud-spring-boot/organization-service:1.0.0-SNAPSHOT
