--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,24 +23,24 @@ services:
         CONFIGSERVER_URI: "http://config-service:8888"
         CONFIGSERVER_PORT:   "8888"
 
-#  licensing-service:
-#    environment:
-#      PROFILE: "dev"
-#      CONFIGSERVER_URI: "http://config-service:8888"
-#      CONFIGSERVER_PORT:   "8888"
-#      DB_PORT: "5432"
-#      EUREKASERVER_URI: "http://eureka:8761/eureka/"
-#      EUREKASERVER_PORT: "8761"
-#      AUTH_URI: "http://auth:3333/auth/user"
-#      KAFKA_SERVER_URI: "kafka"
-#      ZK_SERVER_URI: "kafka"
-#      KAFKA_SERVER_PORT: "2181"
-#
-#  database:
-#    environment:
-#      POSTGRES_USER: "postgres_dev"
-#      POSTGRES_PASSWORD: "611191"
-#      POSTGRES_DB: "eagle_eye_dev"
+  licensing-service:
+    environment:
+      PROFILE: "dev"
+      CONFIGSERVER_URI: "http://config-service:8888"
+      CONFIGSERVER_PORT:   "8888"
+      DB_PORT: "5432"
+      EUREKASERVER_URI: "http://eureka:8761/eureka/"
+      EUREKASERVER_PORT: "8761"
+      AUTH_URI: "http://auth:3333/auth/user"
+      KAFKA_SERVER_URI: "kafka"
+      ZK_SERVER_URI: "kafka"
+      KAFKA_SERVER_PORT: "2181"
+
+  database:
+    environment:
+      POSTGRES_USER: "postgres_dev"
+      POSTGRES_PASSWORD: "611191"
+      POSTGRES_DB: "eagle_eye_dev"
 
   organization-service1:
       environment:
@@ -53,7 +53,7 @@ services:
         KAFKA_SERVER_URI: "kafka"
         ZK_SERVER_URI: "kafka"
         KAFKA_SERVER_PORT: "2181"
-        LD_PRELOAD: "/usr/local/organization-service/jemalloc/lib/libjemalloc.so.1"
+        LD_PRELOAD: "/usr/local/organization-service/jemalloc/lib/libjemalloc.so"
         MALLOC_CONF: "prof:true,lg_prof_interval:30,lg_prof_sample:17"
 
 #  organization-service2:
