--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,12 @@
 version: '2.1'
 services:
 
+  zipkin:
+    environment:
+      PROFILE: "dev"
+      CONFIGSERVER_URI: "http://config-service:8888"
+      CONFIGSERVER_PORT: "8888"
+
   config-service:
     environment:
       ENCRYPT_KEY: "dev-password"
@@ -35,6 +41,7 @@ services:
       KAFKA_SERVER_URI: "kafka"
       ZK_SERVER_URI: "kafka"
       KAFKA_SERVER_PORT: "2181"
+      ZIPKIN_SERVER_URI: "http://zipkin:9411"
 
   database:
     environment:
@@ -55,6 +62,7 @@ services:
         KAFKA_SERVER_PORT: "2181"
         LD_PRELOAD: "/usr/local/organization-service/jemalloc/lib/libjemalloc.so"
         MALLOC_CONF: "prof:true,lg_prof_interval:30,lg_prof_sample:17"
+        ZIPKIN_SERVER_URI: "http://zipkin:9411"
 
 #  organization-service2:
 #      environment:
