--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,12 @@
 version: '2.1'
 services:
 
+  zipkin:
+    environment:
+      PROFILE: "prod"
+      CONFIGSERVER_URI: "http://config-service:8888"
+      CONFIGSERVER_PORT: "8888"
+
   config-service:
     environment:
       ENCRYPT_KEY: "prod-password"
@@ -35,6 +41,7 @@ services:
       KAFKA_SERVER_URI: "kafka"
       ZK_SERVER_URI: "kafka"
       KAFKA_SERVER_PORT: "2181"
+      ZIPKIN_SERVER_URI: "http://zipkin:9411"
 
   database:
     environment:
@@ -53,6 +60,7 @@ services:
         KAFKA_SERVER_URI: "kafka"
         ZK_SERVER_URI: "kafka"
         KAFKA_SERVER_PORT: "2181"
+        ZIPKIN_SERVER_URI: "http://zipkin:9411"
 
 #  organization-service2:
 #      environment:
